script bilgisi eklendi

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <body>
     <h1 style="color: coral;">ozanbektas</h1>
     <h2 id="info"></h2>
+    <script src="kosullarlacalismak.js"></script>
 </body>
 </html>
